# ProcureIQ

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  api.py  graph.py  ingest.py  observability.py  pyproject.toml  state.py
backend/agents/: human_review.py  market_scout.py  policy_librarian.py  risk_synthesizer.py
backend/tests/: test_graph.py  test_nodes.py  test_observability.py  test_state.py
backend/tools/: erp_mock.py  tavily.py
corpus/: far_part_9.txt  nist_sp_800_161_rev1.txt  omb_circular_a123.txt  procureiq_supplier_risk_policy_v2.txt
docs/screenshots/: README.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: AgentCard.test.tsx  Assess.test.tsx  Dashboard.test.tsx  RiskBrief.test.tsx
frontend/src/components/: AgentCard.tsx  MarketSignalList.tsx  PolicyHitList.tsx  RiskDonut.tsx  RiskGauge.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Assess.tsx  Dashboard.tsx  RiskBrief.tsx
infra/: backend.hcl.example  backend.tf  container_apps.tf  keyvault.tf  main.tf  monitoring.tf  openai.tf  outputs.tf  providers.tf  registry.tf  search.tf  static_web_app.tf  terraform.tfvars.example  variables.tf
