[project]
name = "procureiq-backend"
version = "0.1.0"
description = "ProcureIQ vendor risk assessment backend"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "azure-search-documents>=12.0.0",
    "fastapi>=0.136.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

# api.py intentionally calls load_dotenv() before importing modules that read
# environment variables at import time, so its imports follow that call.
[tool.ruff.lint.per-file-ignores]
"api.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
